--- a/lib/app/templates/ReportTemplate.html
+++ b/lib/app/templates/ReportTemplate.html
@@ -1,5 +1,8 @@
 <a href="#broadband" data-toggle="collapse">
-    <h3 class="broadband">Broadband</h3>
+    <h3 class="broadband">
+        Broadband
+        <span class="glyphicon glyphicon-chevron-down"></span>
+    </h3>
 </a>
 <div id="broadband" class='collapse in'>
     <h4 class='broadband'>Fiber Providers</h4>
@@ -54,7 +57,10 @@
 </div>
 
 <a href="#utilities" data-toggle="collapse">
-    <h3 class="utilities">Utilities</h3>
+    <h3 class="utilities">
+        Utilities
+        <span class="glyphicon glyphicon-chevron-down"></span>
+    </h3>
 </a>
 <div class="collapse in" id="utilities">
     <h4 class="utilities">Local Exchange Areas</h4>
@@ -117,7 +123,10 @@
 </div>
 
 <a href="#transportation" data-toggle="collapse">
-    <h3 class="transportation">Transportation</h3>
+    <h3 class="transportation">
+        Transportation
+        <span class="glyphicon glyphicon-chevron-down"></span>
+    </h3>
 </a>
 <div id="transportation" class="collapse in">
     <h4 class="transportation">Major Roads, Freeways, US Highways and State Highways within 1 Mile</h4>
@@ -198,7 +207,10 @@
 </div>
 
 <a href="#demographics" data-toggle="collapse">
-    <h3 class="demographics">Workforce</h3>
+    <h3 class="demographics">
+        Workforce
+        <span class="glyphicon glyphicon-chevron-down"></span>
+    </h3>
 </a>
 <div id="demographics" class="collapse in">
     <h4 class="demographics">Enterprise Zones</h4>
@@ -291,7 +303,10 @@
 </div>
 
 <a href='#lifestyle' data-toggle='collapse'>
-    <h3 class="lifestyle">Lifestyle/Recreation</h3>
+    <h3 class="lifestyle">
+        Lifestyle/Recreation
+        <span class="glyphicon glyphicon-chevron-down"></span>
+    </h3>
 </a>
 <div id="lifestyle" class="collapse in">
     <h4 class="lifestyle">National Parks</h4>
