new logos for report
closes #125

--- a/lib/app/templates/Report.html
+++ b/lib/app/templates/Report.html
@@ -1,11 +1,11 @@
 <div>
     <div class="logo-container">
-        <img src="app/resources/img/goed.png" alt="GOED Logo">
+        <img src="app/resources/img/goed_report.png" alt="GOED Logo">
         <img data-dojo-attach-point='sureSitesLogo'
             src="app/resources/img/suresites.png"
             class='hidden'
             alt="SURE Sites Logo">
-        <img src="app/resources/img/edc.png" alt="EDC Utah Logo">
+        <img src="app/resources/img/edc_report.png" alt="EDC Utah Logo">
     </div>
     <div class="site-full clearfix main">
         <button class="btn btn-default"
