--- a/lib/app/resources/Search.styl
+++ b/lib/app/resources/Search.styl
@@ -1,12 +1,8 @@
-@import '../../agrc/resources/locate/FindAddress.css';
-@import '../../agrc/resources/locate/MagicZoom.css';
-.search {
-    margin-bottom: 10px;
-}
-.search .find-address label.control-label {
-    font-size: 14px;
-    font-weight: normal;
-}
-.search .find-address .btn-default {
-    width: 100%;
-}
+.search
+    margin-bottom 10px
+    .find-address
+        label.control-label
+            font-size 14px
+            font-weight normal
+        .btn-default
+            width 100%
