--- a/lib/app/resources/CurrentLocation.styl
+++ b/lib/app/resources/CurrentLocation.styl
@@ -1,83 +1,22 @@
-.current-location {
-    width: 320px;
-    height: 122px;
-    padding: 10px;
-    float: right;
-}
-.current-location h4 {
-    color: #fff;
-    padding: 0 0 5px 0;
-    margin: 0;
-}
-.current-location h4 img {
-    width: 21px;
-    height: 29px;
-    padding-left: 5px;
-}
-.current-location .glyphicon-refresh {
-    font-size: 34px;
-    margin-left: -18px;
-    left: 50%;
-}
-.current-location ul {
-    font-size: .8em;
-    margin: 0;
-    padding: 0;
-}
+.current-location
+    margin-bottom 15px
+    h4
+        img
+            vertical-align top
+            height 20px
+    .glyphicon-refresh
+        font-size 34px
+        margin-left -18px
+        left 50%
+        animation spin 4s linear infinite
+    ul
+        padding 0
+        li
+            list-style none
+            color #F1F1F2
+    .address li
+        text-overflow ellipsis
+        white-space nowrap
+        overflow hidden
 
-.current-location ul li {
-    list-style: none;
-    color: #F1F1F2;
-}
-
-.current-location .address {
-    width: 60%;
-}
-.current-location .address li {
-    -ms-text-overflow: ellipsis;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
-}
-
-@media only screen and (max-width: 1235px) {
-    .current-location {
-        width: 100%;
-        height: 96px;
-        clear: both;
-        margin-top: 9px;
-    }
-    .current-location h4 {
-        padding-bottom: 0;
-    }
-    .current-location .address {
-        width: 100%;
-    }
-    .current-location .address2 {
-        width: 100%;
-        margin-top: 5px;
-    }
-    .current-location h4 {
-        padding-bottom: 0;
-    }
-    .current-location ul li {
-        list-style: none;
-        color: #F1F1F2;
-        float: left;
-        margin-left: 1em;
-    }
-    .current-location ul li[data-dojo-attach-point='addressNode'] {
-        margin-left: 0;
-    }
-}
-
-@media only screen and (max-width: 767px) {
-    .current-location ul li {
-        float: none;
-        margin: 0;
-    }
-    .current-location {
-        height: 136px;
-        margin-top: -7px;
-    }
-}
+@keyframes spin { 100% { transform: rotate(360deg) } }
