--- a/lib/app/resources/FindAddress.styl
+++ b/lib/app/resources/FindAddress.styl
@@ -1,45 +1,10 @@
-@import url(../../agrc/resources/locate/FindAddress.css);
-
-.find-address input[data-dojo-attach-point='txtZone'] {
-    z-index: 26;
-    position: relative;
-}
-.find-address .form-group {
-    position: relative;
-}
-.find-address .magic-zoom {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    padding: 0;
-}
-.find-address .magic-zoom .input-group {
-    visibility: hidden;
-    display: none;
-}
-.find-address .magic-zoom .input-group-addon {
-    background-color: #0c5d63;
-    color: #fff;
-    border-color: #09484c;
-}
-.find-address .magic-zoom .matches-table {
-    top: 35px;
-    left: 0;
-    right: 38px;
-    width: auto;
-    color: #555555;
-}
-.find-address .magic-zoom .highlighted-row:first-child {
-    border-top-left-radius: 3px;
-    border-top-right-radius: 3px;
-}
-.find-address .magic-zoom .highlighted-row:nth-last-child(2) {
-    border-bottom-left-radius: 3px;
-    border-bottom-right-radius: 3px;
-}
-.find-address .form-group .help-block {
-    right: 8px;
-    position: absolute;
-    top: 2px;
-    z-index: 100;
-}
+.find-address .form-group
+    position relative
+    .help-block:not(.no-match-found)
+        right 8px
+        position absolute
+        top 2px
+        z-index 100
+    &:not(.has-error) .help-block
+        display none
+        visibility hidden
