--- a/lib/app/resources/Layer.styl
+++ b/lib/app/resources/Layer.styl
@@ -1,80 +1,50 @@
-@import '../../awesome-bootstrap-checkbox/awesome-bootstrap-checkbox.css';
-/* use glyphicons instead of font-awesome for awesome-bootstrap-checkbox */
-.layer.checkbox input[type=checkbox]:checked + label:after {
-    font-family: 'Glyphicons Halflings';
-    content: "\e013";
-}
-.layer.checkbox label:after {
-    padding-left: 4px;
-    padding-top: 2px;
-    font-size: 9px;
-}
+// use glyphicons instead of font-awesome for awesome-bootstrap-checkbox
+.layer.checkbox
+    input[type=checkbox]:checked + label:after
+        font-family 'Glyphicons Halflings'
+        content "\e013"
+    label:after
+        padding-left 4px
+        padding-top 2px
+        font-size 9px
 
-/* following two rules are needed for built version */
-/* possibly a bug in xstyle? */
-.layer.checkbox input[type='checkbox'] {
-    opacity: 0;
-}
-.layer.radio input:checked + label::after {
-    -webkit-transform: scale(1, 1);
-            transform: scale(1, 1);
-}
-/* for sure a workaround for a bug in xstyle */
-.checkbox input[disabled] + label {
-    opacity: 0.65;
-}
+// FIBER LEGEND
+.layer div[data-toggle='tooltip']
+    display inline
+.layer .legend td
+    padding 3px
+.layer .legend .short
+    background-color #7F7F84
+    border-top-left-radius 2px
+    border-top-right-radius 2px
+.layer .legend .custom
+    background-color #9F9FA2
+    border-bottom-left-radius 2px
+    border-bottom-right-radius 2px
+.layer .tooltip.in
+    opacity 1 !important
+.broadband .layer .tooltip .tooltip-inner
+    padding 3px
 
-
-/* FIBER LEGEND */
-.layer div[data-toggle='tooltip'] {
-    display: inline;
-}
-.layer .legend td {
-    padding: 3px;
-}
-.layer .legend .short {
-    background-color: #7F7F84;
-    border-top-left-radius: 2px;
-    border-top-right-radius: 2px;
-}
-.layer .legend .custom {
-    background-color: #9F9FA2;
-    border-bottom-left-radius: 2px;
-    border-bottom-right-radius: 2px;
-}
-.layer .tooltip.in {
-    opacity: 1 !important;
-}
-.broadband .layer .tooltip .tooltip-inner {
-    padding: 3px;
-}
-
-.layer {
-    margin: 0 !important;
-    padding: 5px 7px 0px 10px;
-    font-size: .9em;
-}
-.layer:last-child {
-    padding-bottom: 5px;
-}
-.layer img {
-    position: absolute;
-    margin-left: 8px;
-    margin-top: 2px;
-}
+.layer
+    margin 0 !important
+    padding 5px 7px 0px 10px
+    font-size .9em
+.layer:last-child
+    padding-bottom 5px
+.layer img
+    position absolute
+    margin-left 8px
+    margin-top 2px
 .layer.checkbox label,
-.layer.radio label {
-    padding-left: 5px;
-    max-width: 225px;
-}
+.layer.radio label
+    padding-left 5px
+    max-width 225px
 .layer.checkbox input[type='checkbox'],
-.layer.radio input[type='radio'] {
-    position: inherit;
-    margin-left: 9px;
-}
-.layer.checkbox label.hide-checkbox::before {
-    display: none;
-}
-.layer.checkbox label.hide-checkbox::after {
-    display: none;
-}
+.layer.radio input[type='radio']
+    position inherit
+    margin-left 9px
+.layer.checkbox label.hide-checkbox::before
+    display none
+.layer.checkbox label.hide-checkbox::after
+    display none
