--- a/lib/app/templates/Layers.html
+++ b/lib/app/templates/Layers.html
@@ -1,7 +1,5 @@
 <div>
-    <div data-dojo-attach-point="searchDiv"></div>
-    <div class="scroller">
-        <div data-dojo-attach-point='sureSitesDiv'></div>
-        <ul data-dojo-attach-point='groupsContainer'></ul>
-    </div>
+    <div data-dojo-attach-point='searchDiv'></div>
+    <div data-dojo-attach-point='sureSitesDiv'></div>
+    <ul data-dojo-attach-point='groupsContainer'></ul>
 </div>
