complete implementation of left side nav
except for mobile
ref #131

--- a/lib/app/resources/App.styl
+++ b/lib/app/resources/App.styl
@@ -5,6 +5,7 @@
 @import '../../awesome-bootstrap-checkbox/awesome-bootstrap-checkbox.css';
 @import '../../seiyria-bootstrap-slider/dist/css/bootstrap-slider.css';
 @import '../../../src/layer-selector/resources/LayerSelector';
+@import '../../../src/sherlock/resources/Sherlock';
 @import 'CurrentLocation';
 @import 'FindAddress';
 @import 'Group';
@@ -13,7 +14,6 @@
 @import 'Search';
 @import 'Slider';
 @import 'SureSites';
-@import '../../../src/sherlock/resources/Sherlock';
 @import 'variables';
 
 html, body, .app
@@ -36,7 +36,7 @@ html, body, .app
             line-height 38px
             font-size 2.3em
             font-weight 600
-        .links
+        ul
             list-style-type none
             padding-left 0
         hr
