--- a/lib/app/templates/App.html
+++ b/lib/app/templates/App.html
@@ -7,35 +7,25 @@
             <li><a href='??' target='_blank'>CONTACT US</a></li>
         </ul>
         <hr>
+
         <div data-dojo-attach-point="currentLocationDiv"></div>
         <div data-dojo-attach-point='layersDiv' class='layers'></div>
-    </div>
 
+        <ul>
+            <li><a href="http://broadband.utah.gov" target='_blank'>Broadband Outreach Center</a></li>
+            <li><a href="http://edcutah.org/" target='_blank'>edcUtah</a></li>
+            <li><a href="http://goed.utah.gov" target='_blank'>Utah Governor's Office of Economic Development</a></li>
+        </ul>
+        <hr>
+        <ul>
+            <li><a href="http://www.utah.gov/main/index" target='_blank'>Utah.gov</a></li>
+            <li><a href="http://www.utah.gov/disclaimer.html" target='_blank'>Terms of Use</a></li>
+            <li><a href="http://www.utah.gov/privacypolicy.html" target='_blank'>Privacy Policy</a></li>
+            <li><a href="http://www.utah.gov/accessibility.html" target='_blank'>Accessibility Policy</a></li>
+            <li><a href="http://www.utah.gov/translate.html" target='_blank'>Translate</a></li>
+        </ul>
+    </div>
     <div data-dojo-attach-point="mapDiv" class='map'>
         <div data-dojo-attach-point="sherlockDiv"></div>
-    </div>
-
-    <div id="footer-wrapper" class="site-full">
-        <div class='contact hidden'>
-            <a href='http://utahsuresites.com' class='suresitesLogo ir' target="_blank">Sure Sites</a>
-            <a href='tel:801-538-8831' class='expertLogo ir'
-                title='Technical Questions: (801) 538-8831 <br> Economic Development Assistance: (801) 328-8839'
-                data-html='true'>Ask An Expert!</a>
-        </div>
-        <div id="footer" class="site">
-            <a href="http://edcutah.org" id="edcLogo" class="ir" target='_blank'>Economic Development Corporation of Utah</a>
-            <a href="http://goed.utah.gov" id="goedLogo" class="ir" target='_blank'>Governor's Office of Economic Development</a>
-
-            <div class="col20 pull-right">
-                <ul>
-                    <li><a href="http://www.utah.gov/main/index" target='_blank'>Utah.gov</a></li>
-                    <li><a href="http://www.utah.gov/disclaimer.html" target='_blank'>Terms of Use</a></li>
-                    <li><a href="http://www.utah.gov/privacypolicy.html" target='_blank'>Privacy Policy</a></li>
-                    <li><a href="http://www.utah.gov/accessibility.html" target='_blank'>Accessibility Policy</a></li>
-                    <li><a href="http://www.utah.gov/translate.html" target='_blank'>Translate</a></li>
-                </ul>
-            </div>
-            <div class="clearfix"></div>
-        </div>
     </div>
 </div>
