--- a/lib/app/resources/Group.styl
+++ b/lib/app/resources/Group.styl
@@ -1,44 +1,63 @@
-.group a {
-    padding: 15px 15px 15px 50px;
-    display: block;
-    text-shadow: 0 1px 0 #666;
-    color: #fff;
-}
-.group a:hover, .group a:focus {
-    color: #fff;
-}
-.group {
-    position: relative;
-}
-.group>button {
-    position: absolute;
-    top: 0;
-    padding: 3px 7px;
-    margin: 12px;
-}
-.group>button[data-toggle='popover'] {
-    right: 33px;
-}
-.group>a>span.glyphicon {
-    right: 0;
-    position: absolute;
-    top: 0;
-    padding: 7px 7px;
-    margin: 12px;
-}
-.group>button:focus,
-.group>button:active,
-.group>button:hover {
-    color: #fff;
-    outline: none;
-    box-shadow: none;
-}
-.group>button .glyphicon {
-    top: 2px;
-}
+@import 'variables'
 
-/* hide transparency buttons for layers that it doesn't apply to */
-.group.lifestyle>button[data-toggle='popover'] {
-    display: none;
-    visibility: hidden;
-}
+.group
+    // header colors
+    &.sure-sites
+        background $broadband-sure-sites url(img/icons/office.svg) 15px 12px no-repeat
+    &.broadband
+        background $broadband-sure-sites url(img/icons/broadband.svg) 15px 15px no-repeat
+    &.utilities
+        background $utilities url(img/icons/utilities.svg) 15px 15px no-repeat
+    &.transportation
+        background $transportation url(img/icons/transportation.svg) 15px 15px no-repeat
+    &.demographics
+        background $demographics url(img/icons/demographics.svg) 15px 17px no-repeat
+    &.lifestyle
+        background $lifestyle url(img/icons/lifestyle.svg) 15px 15px no-repeat
+
+    // secondary colors
+    &.sure-sites ul
+        background-color $broadband-sure-sites_secondary
+    &.broadband
+        ul, &>button
+            background-color $broadband-sure-sites_secondary
+    &.utilities
+        ul, &>button
+            background-color $utilities_secondary
+    &.transportation
+        ul, &>button
+            background-color $transportation_secondary
+    &.demographics
+        ul, &>button
+            background-color $demographics_secondary
+    &.lifestyle
+        ul, &>button
+            background-color $lifestyle_secondary
+
+    position relative
+    a
+        padding 15px 15px 15px 50px
+        display block
+        font-weight 500
+        font-size 18px
+        &:hover, &:focus
+            color #fff
+    &>button
+        position absolute
+        top 0
+        padding 3px 7px
+        margin 12px
+        &[data-toggle='popover']
+            right 33px
+        &:focus, &:active, &:hover
+            color #fff
+            outline none
+            box-shadow none
+        .glyphicon
+            top 2px
+    &>a>span.glyphicon
+        right 0
+        position absolute
+        top 0
+        padding 7px 7px
+        margin 12px
