--- a/lib/app/resources/SureSites.styl
+++ b/lib/app/resources/SureSites.styl
@@ -1,34 +1,32 @@
-.sure-sites .toggle-layer {
-    padding-top: 8px;
-    padding-bottom: 8px;
-    padding-left: 55px;
-    border-bottom: solid 1px #333;
-}
-.sure-sites .toggle-layer img {
-    height: 35px;
-}
-.sure-sites .group>ul>label {
-    margin-left: 15px;
-    margin-bottom: 0;
-    margin-top: 5px;
-}
-.sure-sites .slider {
-    width: 255px;
-    margin-left: 8px;
-    margin-right: 8px;
-}
-.sure-sites .slider-container {
-    margin-left: 15px;
-    padding-bottom: 15px;
-}
-.map .esriPopup .actionsPane .actionList,
-.map .esriPopup .titlePane .maximize {
-    display: none;
-    visibility: hidden;
-}
+@import 'variables';
+
+.sure-sites
+    .toggle-layer
+        padding-top 8px
+        padding-bottom 8px
+        padding-left 55px
+        border-bottom solid 1px $broadband-sure-sites_secondary
+        img
+            height 35px
+    .group>ul>label
+        margin-left 15px
+        margin-bottom 0
+        margin-top 5px
+    .slider
+        width 235px
+        margin-left 8px
+        margin-right 8px
+    .slider-container
+        margin-left 15px
+        margin-right 15px
+        padding-bottom 15px
+
+.map .esriPopup
+    .actionsPane .actionList, .titlePane .maximize
+        display none
+        visibility hidden
 
 /* reset back to bootstrap default */
-.map .esriPopup a.btn {
-    color: #333333;
-    text-decoration: none;
-}
+.map .esriPopup a.btn
+    color #333333
+    text-decoration none
