--- a/lib/app/resources/variables.styl
+++ b/lib/app/resources/variables.styl
@@ -4,7 +4,12 @@ $map-control-border = #57585A
 
 // group colors
 $broadband-sure-sites = #000000
+$broadband-sure-sites_secondary = #333333
 $transportation = #E09525
+$transportation_secondary = #AD6F29
 $utilities = #107A89
+$utilities_secondary = #0C5D63
 $lifestyle = #0D8C44
+$lifestyle_secondary = #0D6634
 $demographics = #C22127
+$demographics_secondary = #9B1D21
