fix paths to some svg's

--- a/lib/app/resources/App.styl
+++ b/lib/app/resources/App.styl
@@ -4,7 +4,7 @@
 @import '../../agrc/resources/map/BaseMap.css';
 @import '../../awesome-bootstrap-checkbox/awesome-bootstrap-checkbox.css';
 @import '../../seiyria-bootstrap-slider/dist/css/bootstrap-slider.css';
-@import '../../../src/layer-selector/resources/LayerSelector';
+@import '../../../src/layer-selector/resources/LayerSelector.css';
 @import '../../../src/sherlock/resources/Sherlock';
 @import 'CurrentLocation';
 @import 'FindAddress';
