responsive layout for mobile screens
upgraded bootstrap to 3.3.6
Closes #131

--- a/lib/app/resources/variables.styl
+++ b/lib/app/resources/variables.styl
@@ -1,5 +1,7 @@
 $background-grey = #454E56
 $side-bar-width = 300px
+$mobile-header-height = 183px
+$mobile-media-query = 'screen and (max-width: 600px)'
 $map-control-border = #57585A
 
 // group colors
