--- a/lib/app/templates/App.html
+++ b/lib/app/templates/App.html
@@ -1,6 +1,6 @@
 <div>
-    <div class='side-bar'>
-        <span class='title'>UTAH ECONOMIC DEVELOPMENT MAP</span>
+    <div class='side-bar' data-dojo-attach-point='sideBar'>
+        <div class='title'>UTAH ECONOMIC DEVELOPMENT MAP</div>
         <ul class="links">
             <li><a href="??" target='_blank'>ABOUT</a></li>
             <li><a href='http://utahsuresites.com' target='_blank'>UTAH SURE SITES</a></li>
