--- a/lib/app/resources/CurrentLocation.styl
+++ b/lib/app/resources/CurrentLocation.styl
@@ -1,9 +1,21 @@
+@import 'variables'
+
 .current-location
     margin-bottom 15px
     h4
         img
             vertical-align top
             height 20px
+    .mobile-menu-btn
+        display none
+        visibility hidden
+        @media $mobile-media-query
+            display inline-block
+            visibility visible
+            float right
+            background transparent
+            border none
+            color #FFFFFF
     .glyphicon-refresh
         font-size 34px
         margin-left -18px
@@ -13,10 +25,17 @@
         padding 0
         li
             list-style none
-            color #F1F1F2
     .address li
         text-overflow ellipsis
         white-space nowrap
         overflow hidden
+    @media $mobile-media-query
+        height 90px
+        [data-dojo-attach-point='addressContainer']
+            height 59px
+            display flex
+            justify-content space-between
+            align-items center
+            width 100%
 
 @keyframes spin { 100% { transform: rotate(360deg) } }
