--- a/lib/app/templates/CurrentLocation.html
+++ b/lib/app/templates/CurrentLocation.html
@@ -2,6 +2,10 @@
     <h4>
         <img src="app/resources/img/markers/currentLocation.svg" alt="pin">
         Current Location
+        <button type='button' class='btn btn-default btn-xs mobile-menu-btn'
+            data-dojo-attach-event='click: toggleMobilePane'>
+            <span class="glyphicon glyphicon-menu-hamburger"></span>
+        </button>
     </h4>
     <span class="glyphicon glyphicon-refresh hidden"
         data-dojo-attach-point='loader'></span>
