--- a/lib/app/templates/Report.html
+++ b/lib/app/templates/Report.html
@@ -7,7 +7,7 @@
             alt="SURE Sites Logo">
         <img src="app/resources/img/edc_report.png" alt="EDC Utah Logo">
     </div>
-    <div class="site-full clearfix main">
+    <div class="main">
         <button class="btn btn-default"
             data-dojo-attach-event="click: print">
             Print
