better alignment for map popup

--- a/lib/app/resources/App.styl
+++ b/lib/app/resources/App.styl
@@ -87,6 +87,8 @@ html, body, .app
                     opacity 1
                 label
                     max-width 140px
+        .esriPopup .contentPane
+            padding 6px 10px
         @media $mobile-media-query
             top $mobile-header-height
             left 0
