add sure sites colored header and better logo alignment for report
Closes #132

--- a/lib/app/resources/variables.styl
+++ b/lib/app/resources/variables.styl
@@ -15,3 +15,5 @@ $lifestyle = #0D8C44
 $lifestyle_secondary = #0D6634
 $demographics = #C22127
 $demographics_secondary = #9B1D21
+
+@keyframes spin { 100% { transform: rotate(360deg) } }
