--- a/lib/app/templates/Report.html
+++ b/lib/app/templates/Report.html
@@ -2,7 +2,7 @@
     <div class="logo-container">
         <img src="app/resources/img/goed_report.png" alt="GOED Logo">
         <img data-dojo-attach-point='sureSitesLogo'
-            src="app/resources/img/suresites.png"
+            src="app/resources/img/suresites.svg"
             class='hidden'
             alt="SURE Sites Logo">
         <img src="app/resources/img/edc_report.png" alt="EDC Utah Logo">
@@ -35,7 +35,8 @@
 
         <div data-dojo-attach-point="errMsg" class="alert alert-danger hidden"></div>
         <div data-dojo-attach-point="loader" class="alert alert-info hidden">
-            We need to generate a custom report for this location. This may take a few seconds... <span class="glyphicon glyphicon-refresh"></span>
+            We need to generate a custom report for this location. This may take a few seconds...
+            <span class="glyphicon glyphicon-refresh"></span>
         </div>
     </div>
 </div>
