--- a/lib/app/templates/SureSitesAdditionReportTemplate.html
+++ b/lib/app/templates/SureSitesAdditionReportTemplate.html
@@ -1,4 +1,10 @@
-<div class='sure-sites'>
+<a href="#suresites" data-toggle="collapse">
+    <h3 class="sure-sites">
+        <img src="app/resources/img/suresites.svg" alt="">
+        <span class="glyphicon glyphicon-chevron-down"></span>
+    </h3>
+</a>
+<div id='suresites' class='sure-sites-data collapse in'>
     <div class="data">
         <p>
             <strong>Name: </strong>{{Name}}
