--- a/lib/app/resources/Report.styl
+++ b/lib/app/resources/Report.styl
@@ -7,8 +7,11 @@
         justify-content space-between
         flex-wrap wrap
         align-items center
-        margin 5px 10px
-        @media $mobile-media-query
+        img
+            padding 10px
+        img[data-dojo-attach-point='sureSitesLogo']
+            height 110px
+        @media screen and (max-width: 788px)
             flex-direction column
     .main
         margin-top 20px
@@ -29,6 +32,9 @@
         float right
         margin-right 20px
 
+    .glyphicon.glyphicon-refresh
+        animation spin 4s linear infinite
+
     // modify address css for report
     .pull-left
         float none !important
@@ -37,7 +43,11 @@
         display none
 
     h3
-        &.broadband, &.sure-sites
+        &.sure-sites
+            background $broadband-sure-sites url(img/icons/office.svg) 15px 12px no-repeat
+            .glyphicon
+                margin-top 4px
+        &.broadband
             background $broadband-sure-sites url(img/icons/broadband.svg) 15px 15px no-repeat
         &.transportation
             background $transportation url(img/icons/transportation.svg) 15px 15px no-repeat
@@ -94,6 +104,14 @@
         &.no-background
             color: #333;
     .sure-sites
+        padding-top 8px
+        padding-bottom 8px
+        padding-left 55px
+        border-bottom solid 1px $broadband-sure-sites_secondary
+        img
+            height 35px
+    .sure-sites-data
+        overflow hidden
         display: flex;
         strong
             font-size: 16px;
@@ -115,6 +133,8 @@
     body
         font-size 12px
     .report
+        .logo-container img[data-dojo-attach-point='sureSitesLogo']
+            height 70px
         .btn, .current-location
             display none
             visibility hidden
@@ -138,3 +158,7 @@
         a[data-toggle='collapse'] h3
             background none
             padding-left 15px
+        .sure-sites-data
+            padding 0 15px
+            strong
+                font-size 14px
