make footer links smaller and group on two lines
Closes #127

--- a/lib/app/resources/App.styl
+++ b/lib/app/resources/App.styl
@@ -60,6 +60,13 @@ html, body, .app
             &.expanded
                 height 100%
                 overflow-y scroll
+        .footer-links
+            display flex
+            font-size .8em
+            justify-content center
+            margin-bottom 2px
+            li
+                padding 0 10px
     .map
         position absolute
         top 0
