--- a/lib/app/templates/App.html
+++ b/lib/app/templates/App.html
@@ -17,10 +17,12 @@
             <li><a href="http://goed.utah.gov" target='_blank'>Utah Governor's Office of Economic Development</a></li>
         </ul>
         <hr>
-        <ul>
+        <ul class='footer-links'>
             <li><a href="http://www.utah.gov/main/index" target='_blank'>Utah.gov</a></li>
             <li><a href="http://www.utah.gov/disclaimer.html" target='_blank'>Terms of Use</a></li>
             <li><a href="http://www.utah.gov/privacypolicy.html" target='_blank'>Privacy Policy</a></li>
+        </ul>
+        <ul class='footer-links'>
             <li><a href="http://www.utah.gov/accessibility.html" target='_blank'>Accessibility Policy</a></li>
             <li><a href="http://www.utah.gov/translate.html" target='_blank'>Translate</a></li>
         </ul>
