hide find address text boxes on load
Closes #126

--- a/lib/app/resources/FindAddress.styl
+++ b/lib/app/resources/FindAddress.styl
@@ -1,10 +1,19 @@
-.find-address .form-group
-    position relative
-    .help-block:not(.no-match-found)
-        right 8px
-        position absolute
-        top 2px
-        z-index 100
-    &:not(.has-error) .help-block
-        display none
-        visibility hidden
+.find-address
+    .form-group
+        position relative
+        .help-block:not(.no-match-found)
+            right 8px
+            position absolute
+            top 2px
+            z-index 100
+        &:not(.has-error) .help-block
+            display none
+            visibility hidden
+    [data-dojo-attach-point='textBoxContainer']
+        overflow-y hidden
+        max-height 100px
+        transition-property max-height
+        transition-duration .5s
+        transition-timing-function cubic-bezier(0, 1, 0.5, 1)
+        &.closed
+            max-height 0
