--- a/lib/app/templates/FindAddress.html
+++ b/lib/app/templates/FindAddress.html
@@ -1,22 +1,26 @@
 <div>
     <form data-dojo-attach-point='formGeocode'>
-        <div class="form-group">
-            <input type="text" class="form-control"
-                data-dojo-attach-point="txtAddress"
-                id="${id}_inputAddress"
-                placeholder='street address'>
-            <span class="help-block">Required!</span>
+        <div data-dojo-attach-point="textBoxContainer" class="closed">
+            <div class="form-group">
+                <input type="text" class="form-control"
+                    data-dojo-attach-point="txtAddress"
+                    id="${id}_inputAddress"
+                    placeholder='street address'>
+                <span class="help-block">Required!</span>
+            </div>
+            <div class="form-group">
+                <input type="text" class="form-control"
+                    data-dojo-attach-point="txtZone"
+                    id="${id}_input_zone"
+                    placeholder='zip or city'>
+                <span class="help-block">Required!</span>
+            </div>
         </div>
         <div class="form-group">
-            <input type="text" class="form-control"
-                data-dojo-attach-point="txtZone"
-                id="${id}_input_zone"
-                placeholder='zip or city'>
-            <span class="help-block">Required!</span>
-        </div>
-        <div class="form-group">
-            <button type="submit" class="btn btn-default" data-dojo-attach-point='btnGeocode'>Find</button>
-            <span data-dojo-attach-point='errorMsg' class='help-block no-match-found'>No matching address found!</span>
+            <button type="submit" class="btn btn-default"
+                data-dojo-attach-point='btnGeocode'>Find</button>
+            <span data-dojo-attach-point='errorMsg'
+                class='help-block no-match-found'>No matching address found!</span>
         </div>
     </form>
 </div>
