--- a/lib/app/resources/App.styl
+++ b/lib/app/resources/App.styl
@@ -55,10 +55,12 @@ html, body, .app
             color @color
         @media $mobile-media-query
             width 100%
-            height $mobile-header-height
+            max-height $mobile-header-height
             overflow hidden
+            transition-property all
+            transition-duration .5s
             &.expanded
-                height 100%
+                max-height 100%
                 overflow-y scroll
         .footer-links
             display flex
