hide current location header until map click (desktop layout only)

--- a/lib/app/resources/CurrentLocation.styl
+++ b/lib/app/resources/CurrentLocation.styl
@@ -2,6 +2,8 @@
 
 .current-location
     margin-bottom 15px
+    >p
+        text-align center
     h4
         img
             vertical-align top
@@ -19,6 +21,7 @@
     .glyphicon-refresh
         font-size 34px
         margin-left -18px
+        margin-top 12px
         left 50%
         animation spin 4s linear infinite
     ul
@@ -31,6 +34,9 @@
         overflow hidden
     @media $mobile-media-query
         height 90px
+        [data-dojo-attach-point='header']
+            visibility visible !important
+            display block !important
         [data-dojo-attach-point='addressContainer']
             height 59px
             display flex
