--- a/lib/app/templates/CurrentLocation.html
+++ b/lib/app/templates/CurrentLocation.html
@@ -1,5 +1,5 @@
 <div>
-    <h4>
+    <h4 data-dojo-attach-point='header' class='hidden'>
         <img src="app/resources/img/markers/currentLocation.svg" alt="pin">
         Current Location
         <button type='button' class='btn btn-default btn-xs mobile-menu-btn'
@@ -10,7 +10,7 @@
     <span class="glyphicon glyphicon-refresh hidden"
         data-dojo-attach-point='loader'></span>
     <p data-dojo-attach-point='helpTxt'>
-        Click on the map to get info about the current location.
+        Click on the map to get information about the current location.
     </p>
     <div data-dojo-attach-point="addressContainer" class='hidden'>
         <ul>
