better SURE Sites, EDC, GOED and Broadband logos
Closes #128
Closes #129
Closes #136

--- a/lib/app/resources/App.styl
+++ b/lib/app/resources/App.styl
@@ -54,6 +54,8 @@ html, body, .app
             margin 5px 0
         a:not(.btn)
             color @color
+        img.logo
+            padding-top 10px
         @media $mobile-media-query
             width 100%
             max-height $mobile-header-height
