--- a/lib/app/templates/App.html
+++ b/lib/app/templates/App.html
@@ -12,9 +12,21 @@
         <div data-dojo-attach-point='layersDiv' class='layers'></div>
 
         <ul>
-            <li><a href="http://broadband.utah.gov" target='_blank'>Broadband Outreach Center</a></li>
-            <li><a href="http://edcutah.org/" target='_blank'>edcUtah</a></li>
-            <li><a href="http://goed.utah.gov" target='_blank'>Utah Governor's Office of Economic Development</a></li>
+            <li>
+                <a href="http://broadband.utah.gov" target='_blank'>
+                    <img src="app/resources/img/broadband_logo.svg" alt="Broadband Outreach Center" class='logo'>
+                </a>
+            </li>
+            <li>
+                <a href="http://edcutah.org/" target='_blank'>
+                    <img src="app/resources/img/edc_logo.svg" alt="edcUtah" class='logo'>
+                </a>
+            </li>
+            <li>
+                <a href="http://goed.utah.gov" target='_blank'>
+                    <img src="app/resources/img/goed_logo.svg" alt="Utah Governor's Office of Economic Development" class='logo'>
+                </a>
+            </li>
         </ul>
         <hr>
         <ul class='footer-links'>
