--- a/lib/app/resources/FindAddress.styl
+++ b/lib/app/resources/FindAddress.styl
@@ -1,8 +1,12 @@
+@import '../../../src/sherlock/resources/Sherlock';
+
+$sherlock-width = 280px
+
 .find-address
     .form-group
         position relative
         .help-block:not(.no-match-found)
-            right 8px
+            right 50px
             position absolute
             top 2px
             z-index 100
@@ -17,3 +21,11 @@
         transition-timing-function cubic-bezier(0, 1, 0.5, 1)
         &.closed
             max-height 0
+    .sherlock
+        padding 0
+        position inherit
+        width 100%
+        .input-group
+            width $sherlock-width
+.matches-table
+    width $sherlock-width
