--- a/lib/app/templates/App.html
+++ b/lib/app/templates/App.html
@@ -39,7 +39,6 @@
             <li><a href="http://www.utah.gov/translate.html" target='_blank'>Translate</a></li>
         </ul>
     </div>
-    <div data-dojo-attach-point="mapDiv" class='map'>
-        <div data-dojo-attach-point="sherlockDiv"></div>
-    </div>
+    <div data-dojo-attach-point="mapDiv" class='map'></div>
+    <div data-dojo-attach-point='sherlockMatchesTableContainer' class='sherlock'></div>
 </div>
