--- a/lib/app/templates/FindAddress.html
+++ b/lib/app/templates/FindAddress.html
@@ -9,7 +9,8 @@
                 <span class="help-block">Required!</span>
             </div>
             <div class="form-group">
-                <input type="text" class="form-control"
+                <div data-dojo-attach-point='sherlockDiv'></div>
+                <input type="text" class="form-control hidden"
                     data-dojo-attach-point="txtZone"
                     id="${id}_input_zone"
                     placeholder='zip or city'>
