--- a/lib/app/templates/FindAddress.html
+++ b/lib/app/templates/FindAddress.html
@@ -1,5 +1,5 @@
 <div>
-    <form data-dojo-attach-point='formGeocode'>
+    <div data-dojo-attach-point='formGeocode'>
         <div data-dojo-attach-point="textBoxContainer" class="closed">
             <div class="form-group">
                 <input type="text" class="form-control"
@@ -18,10 +18,10 @@
             </div>
         </div>
         <div class="form-group">
-            <button type="submit" class="btn btn-default"
+            <button class="btn btn-default"
                 data-dojo-attach-point='btnGeocode'>Find</button>
             <span data-dojo-attach-point='errorMsg'
                 class='help-block no-match-found'>No matching address found!</span>
         </div>
-    </form>
+    </div>
 </div>
