dynamically modifying find address button is no longer needed

--- a/lib/app/templates/FindAddress.html
+++ b/lib/app/templates/FindAddress.html
@@ -19,7 +19,7 @@
         </div>
         <div class="form-group">
             <button class="btn btn-default"
-                data-dojo-attach-point='btnGeocode'>Find</button>
+                data-dojo-attach-point='btnGeocode'>Find Address</button>
             <span data-dojo-attach-point='errorMsg'
                 class='help-block no-match-found'>No matching address found!</span>
         </div>
