UTAH SURE SITES -> SUBMIT A SURE SITE
Closes #143

--- a/lib/app/templates/App.html
+++ b/lib/app/templates/App.html
@@ -3,7 +3,7 @@
         <div class='title'>UTAH ECONOMIC DEVELOPMENT MAP</div>
         <ul class="links">
             <li><a href="https://broadband.utah.gov/aboutlocate" target='_blank'>ABOUT</a></li>
-            <li><a href='http://utahsuresites.com' target='_blank'>UTAH SURE SITES</a></li>
+            <li><a href='http://utahsuresites.com/node/add/property' target='_blank'>SUBMIT A SURE SITE</a></li>
             <li><a href='https://broadband.utah.gov/locatecontact' target='_blank'>CONTACT US</a></li>
         </ul>
         <hr>
