--- a/lib/app/resources/App.styl
+++ b/lib/app/resources/App.styl
@@ -55,6 +55,18 @@ html, body, .app
             color @color
         img.logo
             padding-top 10px
+        >p
+            text-align center
+        .mobile-menu-btn
+            display none
+            visibility hidden
+            @media $mobile-media-query
+                display inline-block
+                visibility visible
+                float right
+                background transparent
+                border none
+                color #FFFFFF
         @media $mobile-media-query
             width 100%
             max-height $mobile-header-height
