--- a/lib/app/templates/App.html
+++ b/lib/app/templates/App.html
@@ -8,7 +8,13 @@
         </ul>
         <hr>
 
-        <div data-dojo-attach-point="currentLocationDiv"></div>
+        <button type='button' class='btn btn-default btn-xs mobile-menu-btn'
+            data-dojo-attach-event='click: toggleMobilePane'>
+            <span class="glyphicon glyphicon-menu-hamburger"></span>
+        </button>
+        <p>
+            Click on the map to get information about the current location.
+        </p>
         <div data-dojo-attach-point='layersDiv' class='layers'></div>
 
         <ul>
