more scroll layout issues

--- a/lib/app/resources/FindAddress.styl
+++ b/lib/app/resources/FindAddress.styl
@@ -1,6 +1,6 @@
 @import '../../../src/sherlock/resources/Sherlock';
 
-$sherlock-width = 280px
+$sherlock-width = 263px
 
 .find-address
     .form-group
@@ -26,6 +26,6 @@ $sherlock-width = 280px
         position inherit
         width 100%
         .input-group
-            width $sherlock-width
+            width 100%
 .matches-table
     width $sherlock-width
