--- a/lib/app/resources/App.styl
+++ b/lib/app/resources/App.styl
@@ -50,7 +50,7 @@ html, body, .app
             list-style-type none
             padding-left 0
         hr
-            margin 5px 0
+            margin 0
         a:not(.btn)
             color @color
         img.logo
