--- a/lib/app/resources/SureSites.styl
+++ b/lib/app/resources/SureSites.styl
@@ -8,8 +8,9 @@
         border-bottom solid 1px $broadband-sure-sites_secondary
         img
             height 35px
-    .group>ul>label
+    ul.indent
         margin-left 15px
+    .group>ul>ul>label
         margin-bottom 0
         margin-top 5px
     .slider
@@ -17,7 +18,6 @@
         margin-left 8px
         margin-right 8px
     .slider-container
-        margin-left 15px
         margin-right 15px
         padding-bottom 15px
 
